# clap_verbosity

./: CHANGELOG.md  Cargo.toml  README.md  rustc-ice-2023-12-10T21_39_37-6676.txt  rustc-ice-2023-12-11T12_08_04-15168.txt
src/: lib.rs  serde_support.rs
