[package]
name = "clap-verbosity"
version = "2.1.0"
description = "Easily add a `--verbose` flag to CLIs using Clap"
authors = ["Pascal Hertleif <killercup@gmail.com>"]
repository = "https://github.com/clap-rs/clap-verbosity-flag"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.70.0" #MSRV

[badges]
codecov = { repository = "ciresnave/clap-verbosity" }

[dependencies]
log = "0.4.20"
clap = { version = "4.4.11", default-features = false, features = ["std", "derive"] }
serde = { version = "1.0.193", optional = true }

[dev-dependencies]
env_logger = "0.10.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-log = "0.2.0"

[features]
default = ["serde"]
# Feature 'serde' adds support for serde serialization/deserialization
serde = ["dep:serde"]